--- a/visitors_app/templates/base.html
+++ b/visitors_app/templates/base.html
@@ -186,7 +186,7 @@
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
             © {% now 'Y' %} Copyright:
-            <a class="text-dark" href="https://sourcecodester.com/tips23" target="_blank">oretnom23</a>
+            <a class="text-dark" href="https://sourcecodester.com/tips23" target="_blank">Inzamamul Haque Ashique</a>
         </div>
         <!-- Copyright -->
     </footer>
